# OneNote-Liberation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/onenote_liberation/: __main__.py  apple_notes_import.py  apple_notes_import_onelevel.py  apple_notes_import_tree.py  assets.py  audit.py  auth_cache.py  clean_export.py  fidelity_clean.py  inspect_export.py  main.py  manifest.py  notes_script_probe.py  patched_main.py
